--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,11 +9,52 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+resources:
+  repositories:
+  - repository: Dependency
+    type: git
+    name: 'javaCode'
+    ref: 'main'
+  - repository: MainCode
+    type: git
+    name: 'CFT'
+    ref: 'main'  
+ 
+parameters:
+  - name: Namespace
+    displayName: Namespace to Deploy
+    type: string
+    values:
+      - devops
+      - hotfix
+      - preprod
+      - uattest
+    default: devops
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+ 
+variables:
+  ACR_NAME: 'RA ACR SC'
+  IMAGE_REF: 'usernotification-service'
+  CODE_REPO: 'usernotification-service'
+  DEP_REPO: 'applib'
+  CODE_DIR: '$(Build.SourcesDirectory)/usernotification-service'
+  DEP_DIR: '$(Build.SourcesDirectory)/applib'
+  imageTag: '$(Build.BuildId)'
+  Env: ${{ parameters.Namespace }}
+  Service: '$(Build.Repository.Name)'
+ 
+stages:
+  - template: templates/Stage-Build-template.yml
+    parameters: 
+      ACR_NAME: 'RA ACR SC'
+      serviceName: 'usernotification-service'
+  - template: "templates/Stage-Deploy-template"
+  
+  steps:
+  - script: echo Hello, world!
+    displayName: 'Run a one-line script'
+
+  - script: |
+      echo Add other tasks to build, test, and deploy your project.
+      echo See https://aka.ms/yaml
+      displayName: 'Run a multi-line script'
